--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <html>
-    <header>
-        <h1> КРУТЫЕ ПЕСЕНКИ </h1>
+    <head>
+        <style>
+            body {
+                font-family: sans-serif;
+                background-color: black;
+            }
+            h1 {
+                text-align: center;
+                color: white;
+            }
+            header {
+                background-color: indigo;
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>КРУТЫЕ ПЕСЕНКИ</h1>
         </header>
-<iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/68190/track/634157">Слушайте <a href="https://music.yandex.ru/album/68190/track/634157">Poison</a> — <a href="https://music.yandex.ru/artist/17664">Alice Cooper</a> на Яндекс Музыке</iframe>
-<iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/25056666/track/18166813">Слушайте <a href="https://music.yandex.ru/album/25056666/track/18166813">Defenders</a> — <a href="https://music.yandex.ru/artist/31653">DragonForce</a> на Яндекс Музыке</iframe>
-<iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/4784595/track/37697887">Слушайте <a href="https://music.yandex.ru/album/4784595/track/37697887">Убивать</a> — <a href="https://music.yandex.ru/artist/42528">Гражданская оборона</a> на Яндекс Музыке</iframe>
-<iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/14121410/track/78656036">Слушайте <a href="https://music.yandex.ru/album/14121410/track/78656036">Russian Vodka</a> — <a href="https://music.yandex.ru/artist/976633">Коррозия металла</a> на Яндекс Музыке</iframe>
-<iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/23532856/track/107348649">Слушайте <a href="https://music.yandex.ru/album/23532856/track/107348649">За острый край</a> — <a href="https://music.yandex.ru/artist/2150261">Электропартизаны</a> на Яндекс Музыке</iframe>
-<iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/219820/track/2214982">Слушайте <a href="https://music.yandex.ru/album/219820/track/2214982">Небо славян</a> — <a href="https://music.yandex.ru/artist/167401">Алиса</a> на Яндекс Музыке</iframe>
+        <iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/68190/track/634157">Слушайте <a href="https://music.yandex.ru/album/68190/track/634157">Poison</a> — <a href="https://music.yandex.ru/artist/17664">Alice Cooper</a> на Яндекс Музыке</iframe>
+        <iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/25056666/track/18166813">Слушайте <a href="https://music.yandex.ru/album/25056666/track/18166813">Defenders</a> — <a href="https://music.yandex.ru/artist/31653">DragonForce</a> на Яндекс Музыке</iframe>
+        <iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/4784595/track/37697887">Слушайте <a href="https://music.yandex.ru/album/4784595/track/37697887">Убивать</a> — <a href="https://music.yandex.ru/artist/42528">Гражданская оборона</a> на Яндекс Музыке</iframe>
+        <iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/14121410/track/78656036">Слушайте <a href="https://music.yandex.ru/album/14121410/track/78656036">Russian Vodka</a> — <a href="https://music.yandex.ru/artist/976633">Коррозия металла</a> на Яндекс Музыке</iframe>
+        <iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/23532856/track/107348649">Слушайте <a href="https://music.yandex.ru/album/23532856/track/107348649">За острый край</a> — <a href="https://music.yandex.ru/artist/2150261">Электропартизаны</a> на Яндекс Музыке</iframe>
+        <iframe frameborder="0" allow="clipboard-write" style="border:none;width:614px;height:244px;" width="614" height="244" src="https://music.yandex.ru/iframe/album/219820/track/2214982">Слушайте <a href="https://music.yandex.ru/album/219820/track/2214982">Небо славян</a> — <a href="https://music.yandex.ru/artist/167401">Алиса</a> на Яндекс Музыке</iframe>
+    </body>
 </html>
